--- a/css/styles.css
+++ b/css/styles.css
@@ -56,7 +56,7 @@ button {
   margin-bottom: 4rem;
   padding-top: 1rem;
   padding-bottom: 1rem;
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.5);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
