--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -52,7 +52,7 @@ button {
         margin-bottom: 4rem;
         padding-top: 1rem;
         padding-bottom: 1rem;
-        background-color: black;
+        background-color: rgb(0,0,0,.5);
         display: flex;
         justify-content: center;
         align-items: center;
